fix:remove dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,28 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
 
-@layer base {
-    body {
-        @apply antialiased text-gray-900 bg-white dark:bg-gray-900 dark:text-gray-100;
-    }
+:root {
+  --background: #ffffff;
+  --foreground: #333333;
+  --sidebar-bg: #f2f3f3;
+  --border: #e2e2e2;
+  --secondary: #5c5c5c;
+  --primary: #3498db;
 }
 
+
+
 @theme {
-    --color-primary: #3498db;
-    --color-secondary: #5c5c5c;
-    --color-sidebar-bg: #f2f3f3;
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-sidebar-bg: var(--sidebar-bg);
+  --color-border: var(--border);
+  --color-secondary: var(--secondary);
+  --color-primary: var(--primary);
+}
+
+@layer base {
+  body {
+    @apply antialiased bg-background text-foreground transition-colors duration-300;
+  }
 }
